gccida/g1/extract_bit_field
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_bit_field/src/expmed.c:1472:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_bit_field/src/expmed.c:1473:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode tmode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_bit_field/src/expmed.c:1476:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v8; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_bit_field/src/expmed.c:1480:4: error: expected ';' after expression
rtx v13; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_bit_field/src/expmed.c:1480:5: error: use of undeclared identifier 'v13'; did you mean 'v11'?
rtx v13; // rax 
    ^~~
    v11
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_bit_field/src/expmed.c:1478:18: note: 'v11' declared here
unsigned __int64 v11; // rbx 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_bit_field/src/expmed.c:1482:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_bit_field/src/expmed.c:1485:4: error: expected ';' after expression
rtx fixed_bit_field; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_bit_field/src/expmed.c:1485:5: error: use of undeclared identifier 'fixed_bit_field'; did you mean 'store_bit_field'?
rtx fixed_bit_field; // r14 
    ^~~~~~~~~~~~~~~
    store_bit_field
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_bit_field/src/expmed.c:289:1: note: 'store_bit_field' declared here
store_bit_field (str_rtx, bitsize, bitnum, fieldmode, value, total_size)
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_bit_field/src/expmed.c:1493:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v26; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_bit_field/src/expmed.c:1495:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_bit_field/src/expmed.c:1497:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode best_mode; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_bit_field/src/expmed.c:1502:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v36; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_bit_field/src/expmed.c:1506:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v40; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_bit_field/src/expmed.c:1512:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v46; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_bit_field/src/expmed.c:1525:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v59; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_bit_field/src/expmed.c:1527:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v61; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_bit_field/src/expmed.c:1535:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v69; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_bit_field/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_bit_field/src/expmed.c:1536:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v70; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_bit_field/src/expmed.c:1539:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v73; // eax 
^
enum 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/extract_bit_field/src/obj/expmed.o] Error 1
